--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>The count is {{count}}</h1>
+<!--    <a href={{url_for('create_users')}}></a>-->
+<!--    <button href="{{url_for('create_users')}}" style="width:400px;height:50px"><a href="" class="btn btn-danger" role="button" style="width:400px;height:50px"></a></button>-->
+    <a href="{{url_for('create_users')}}"><button class="btn btn-danger" style="width:400px;height:50px">REDIRECT</button></a>
 </body>
 </html>
