--- a/templates/login.html
+++ b/templates/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form by Codent</title>
+    <title>Log In Form by Codent</title>
 
     <!-- Font Icon -->
-    <link rel="stylesheet" href="../fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="../static/fonts/material-icon/css/material-design-iconic-font.min.css">
 
     <!-- Main css -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
     <div class="main">
@@ -18,8 +18,8 @@
             <div class="container">
                 <div class="signin-content">
                     <div class="signin-image">
-                        <figure><img src="../images/signin-image.jpg" alt="sing up image"></figure>
-                        <a href="#" class="signup-image-link">Create an account</a>
+                        <figure><img src="../static/images/signin-image.jpg" alt="sing up image"></figure>
+                        <a href="/signup.html" class="signup-image-link">Create an account</a>
                     </div>
 
                     <div class="signin-form">
@@ -57,6 +57,6 @@
     </div>
     <!-- JS -->
     <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../static/js/main.js"></script>
 </body>
 </html>
