--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,10 +7,10 @@
     <title>Sign Up Form by Codent</title>
 
     <!-- Font Icon -->
-    <link rel="stylesheet" href="../fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="../static/fonts/material-icon/css/material-design-iconic-font.min.css">
 
     <!-- Main css -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
 
@@ -49,7 +49,7 @@
                         </form>
                     </div>
                     <div class="signup-image">
-                        <figure><img src="../images/signup-image.jpg" alt="sing up image"></figure>
+                        <figure><img src="../static/images/signup-image.jpg" alt="sing up image"></figure>
                         <a href="#" class="signup-image-link">I am already member</a>
                     </div>
                 </div>
@@ -60,6 +60,6 @@
 
     <!-- JS -->
     <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../static/js/main.js"></script>
 </body><!-- This templates was made by Codent -->
 </html>
