--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
-    <h1>The count is {{count}}</h1>
+    <h1>The count of test is {{count_test}}</h1>
+    <h1>The count of signup is {{count_signup}}</h1>
+    <h1>THe count of login is {{count_login}}</h1>
 <!--    <a href={{url_for('create_users')}}></a>-->
 <!--    <button href="{{url_for('create_users')}}" style="width:400px;height:50px"><a href="" class="btn btn-danger" role="button" style="width:400px;height:50px"></a></button>-->
         <a href="{{url_for('create_users')}}"><button class="btn btn-danger" style="width:400px;height:50px">REDIRECT</button></a>
