login basic backend(w/o checking database for existing users)

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,6 +11,8 @@
 
     <!-- Main css -->
     <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
 
