--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,14 +15,13 @@
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
-
     <div class="main">
-
         <!-- Sign up form -->
         <section class="signup">
             <div class="container">
                 <div class="signup-content">
                     <div class="signup-form">
+                        <p class=error><strong>{{ message }}</strong> </p>
                         <h2 class="form-title">Sign up</h2>
                         <form method="POST" class="register-form" id="register-form">
                             <div class="form-group">
