--- a/templates/signout.html
+++ b/templates/signout.html
@@ -2,11 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lets Hope This Works</title>
-    <link rel="stylesheet" href="../static/fonts/material-icon/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!-- Main css -->
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <title>Lets hope this works</title>
 </head>
 <body>
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
@@ -28,9 +24,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <h1>The count of test is {{count_test}}</h1>
-    <h1>The count of signup is {{count_signup}}</h1>
-    <a href="{{url_for('signup')}}"><button class="btn btn-danger" style="width:400px;height:50px">Signup</button></a>
-    <a href="{{url_for('login')}}"><button class="btn btn-danger" style="width:400px;height:50px">Log in</button></a>
+<h1>You are signed out!</h1>
 </body>
 </html>
