--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="../static/fonts/material-icon/css/material-design-iconic-font.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Main css -->
-  <link rel="stylesheet" href="../static/css/styles.css?<?=filemtime('styles.css');?>"  />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+<!--    <link rel="stylesheet" href="../static/css/styles.css?<?=filemtime('styles.css');?>"  />-->
 
 
 </head>
