--- a/static/css/abc.css
+++ b/static/css/abc.css
@@ -222,13 +222,12 @@ header {
     float: right;
     list-style: none;
     margin-top: 55px;
-  color: #222;
+    color: #222;
 }
 
 .main-nav li {
-    display: inline-block;
+    display: block;
     margin-left: 40px;
-  color: #222;
 }
 
 .main-nav li a:link,
