--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,9 +1,46 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+
+    <title>Lets hope this works</title>
+    <link rel="stylesheet" href="../static/fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Main css -->
+<!--    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">-->
+    <link rel="stylesheet" href = "../static/css/styles_signup.css">
+    <!--    <link rel="stylesheet" href="../static/css/styles.css?<?=filemtime('styles.css');?>"  />-->
+<style>.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 55px;
+    color: #222;
+}</style>
+
+</head>
+<body style="background-color:black;">>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top sai" id="mainNav">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand " href="#page-top">Sakura</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#signup">Signup</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     <div class="main">
         <!-- Sign up form -->
         <section class="signup">
-            <div class="container">
+            <div class="container1">
                 <div class="signup-content">
                     <div class="signup-form">
                         <p class=error><strong>{{ message }}</strong> </p>
@@ -48,4 +85,5 @@
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script src="../static/js/main.js"></script>
 <!-- This templates was made by Codent -->
-{% endblock %}
+</body>
+</html>
